landoui/assets_src/css/lando.scss
@import "bulma/sass/utilities/initial-variables";
@import "colors";

// Customize Bulma variables
$primary: $blue;
$info: $turquoise;
$success: $green;
$warning: $orange;
$danger: $red;

$family-sans-serif: 'Fira Sans', Arial, Helvetica, sans-serif;
$family-monospace: 'Fira Mono' monospace;

$primary: $blue;

@import "bulma/bulma";

// Makes sure the footer stays near the bottom of the page.
body {
  display: flex;
  min-height: 100vh;
  flex-direction: column;
}

main {
  flex: 1 0 auto;
}

// The banner that appears at the top of every page
section.hero {
  padding: 0.25rem 0 0.25rem 0.25rem;

  p {
    font-size: 1.25rem;
  }
}

